# eye-alarm

./: settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/com/example/eyealarm/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: nanodet-plus-0.5x-416_head-face.mnn  pipeline.json
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  pipeline.cpp  pipeline.hpp
app/src/main/cpp/modules/detection/: nanodet.cpp  nanodet.hpp
app/src/main/cpp/modules/landmark/: pfldlandmarker.cpp  pfldlandmarker.hpp
app/src/main/cpp/modules/utils/: funcs.cpp  funcs.hpp  objects.hpp
app/src/main/java/com/example/eyealarm/activities/: CameraActivity.java  GameActivity.java  MainActivity.java  RingActivity.java
app/src/main/java/com/example/eyealarm/alarmslist/: AlarmListener.java  AlarmRecyclerViewAdapter.java  AlarmViewHolder.java  AlarmsListFragment.java  AlarmsListViewModel.java
app/src/main/java/com/example/eyealarm/application/: App.java
app/src/main/java/com/example/eyealarm/broadcastreceiver/: AlarmBroadcastReceiver.java
app/src/main/java/com/example/eyealarm/createalarm/: CreateAlarmFragment.java  CreateAlarmViewModel.java  DayUtil.java  TimePickerUtil.java
app/src/main/java/com/example/eyealarm/data/: Alarm.java  AlarmDao.java  AlarmDatabase.java  AlarmRepository.java
app/src/main/java/com/example/eyealarm/service/: AlarmService.java  RescheduleAlarmService.java
app/src/main/java/com/example/eyealarm/utils/: ChallengeCenter.java  EyeUtils.java  GameUtils.java  ImageAdapter.java
app/src/main/res/drawable/: button_center_border.xml  button_left_border.xml  button_right_border.xml  grid_row_border.xml  ic_alarm_black_24dp.xml  ic_alarm_delete_24dp.xml  ic_looks_one_black_24dp.xml  ic_repeat_black_24dp.xml
app/src/main/res/layout/: activity_camera.xml  activity_game.xml  activity_gridview.xml  activity_main.xml  activity_ring.xml  fragment_createalarm.xml  fragment_listalarms.xml  item_alarm.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/eyealarm/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
